--- a/approve-service/src/main/resources/templates/approve-service-detail.html
+++ b/approve-service/src/main/resources/templates/approve-service-detail.html
@@ -9,9 +9,7 @@
 <link rel="stylesheet" href="css/button.css">
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
 </head>
 
 <body>
@@ -19,7 +17,8 @@
 <div class="wrapper rounded bg-white">
 	<div class="h3"
 		style="font-size: 35px; font-weight: 600; margin-bottom: 25px; text-align: center;">대출
-		심사</div><hr>
+		심사</div>
+	<hr>
 	<div class="form">
 
 		<div class="row">
@@ -62,16 +61,23 @@
 				<label>월 납부액</label> <input class="form-control"
 					th:value="${orderVO.amount}" required readonly>
 			</div> -->
-			 <div class="col-md-6 mt-md-0 mt-3"> <label>월 납부액</label>
-                    <input class="form-control" value="500,000원" required readonly>
-                </div>
+			<div class="col-md-6 mt-md-0 mt-3">
+				<label>월 납부액</label> <input class="form-control" value="500,000원"
+					required readonly>
+			</div>
 		</div>
 		<div class="row" style="padding-top: 30px;">
 			<div class="col-md-6"></div>
 			<div class="col-md-6">
-				<button type="button" class="btn-style06 md"
-					style="margin-left: 15%;">승인</button>
-				<button type="button" class="btn-style07 md" style="float: right;">반려</button>
+				<form method="POST">
+					<input type="hidden" id="orderNo" name="orderNo"
+						th:value="${orderVO.orderNo}">
+						
+					<button type="button" class="btn-style06 md"
+						style="margin-left: 15%;" onclick="approval()">승인</button>
+					<button type="button" class="btn-style07 md" style="float: right;"
+						onclick="reject()">반려</button>
+				</form>
 			</div>
 
 		</div>
@@ -83,6 +89,7 @@
 		if (confirm("승인하시겠습니까?")) {
 			var orderNo = $('#orderNo').val();
 
+			//var status = $('#status').val();
 			var status = 1;
 
 			var arr = {
@@ -101,7 +108,7 @@
 				contentType : 'application/json',
 				success : function(data) {
 					alert(orderNo + "번의 대출 심사가 승인되었습니다.")
-					location.href = "/manage/wait";
+					location.href = "/manage/list";
 				},
 				error : function(xhr, status, error) {
 					alert(error);
@@ -132,7 +139,7 @@
 				contentType : 'application/json',
 				success : function(data) {
 					alert(orderNo + "번의 대출 심사가 거절되었습니다.");
-					location.href = "/manage/wait";
+					location.href = "/manage/list";
 				},
 				error : function(xhr, status, error) {
 					alert(error);
@@ -143,6 +150,8 @@
 		}
 	};
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </body>
 
 </html>
