--- a/approve-service/src/main/resources/templates/header.html
+++ b/approve-service/src/main/resources/templates/header.html
@@ -68,7 +68,7 @@
                      </a>
                      <a sec:authorize="hasRole('MANAGER')">
                         <li class=" nav-item" style="padding-right: 15px;"><a
-                           class="nav-link" href="http://localhost:8000/manage/wait">주문 목록</a></li>
+                           class="nav-link" href="http://localhost:8000/manage/list">주문 목록</a></li>
                      </a>
                   </ul>
                   <!-- 주석 끝... -->
