--- a/manage-service/src/main/resources/static/css/manage-service-list.css
+++ b/manage-service/src/main/resources/static/css/manage-service-list.css
@@ -106,3 +106,20 @@ p {
     padding: .375rem .5625rem;
     font-weight: normal
 }
+
+/* 상세보기 */
+.btn-style07 {
+    display: inline-block;
+    min-width: 80px;
+    height: 30px;
+    padding: 0 0px;
+    border-radius: 5px;
+    background: #4494d1;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 700;
+    text-align: center;
+}
+.btn-style07:hover, .btn-style06:focus {
+    background: #666;
+}
