--- a/manage-service/src/main/resources/templates/manage-service-list.html
+++ b/manage-service/src/main/resources/templates/manage-service-list.html
@@ -9,8 +9,17 @@
 <title>manage-service/list</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/manage-service-list.css">
-<link rel="stylesheet" href="css/button.css">
-
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+</head>
+<script>
+	function back() {
+		location.replace("http://localhost:8000/menu/list");
+	}
+	function logout() {
+		location.replace("http://localhost:8000/logout");
+	}
+</script>
 </head>
 
 <body>
@@ -28,21 +37,14 @@
 							<div class="h3"
 								style="font-size: 35px; font-weight: 600; margin-bottom: 25px; text-align: center; color: #212529; padding: 15px;">
 								고객 주문 목록</div>
-							<!-- <div class="input-group md-form form-sm form-2 pl-0">
-                                    <input class="form-control my-0 py-1 pl-3 purple-border" type="text"
-                                        placeholder="Search something here..." aria-label="Search">
-                                    <span class="input-group-addon waves-effect purple lighten-2"
-                                        id="basic-addon1"><a><i class="fa fa-search white-text"
-                                                aria-hidden="true"></i></a></span>
-                                </div> -->
 						</div>
 						<!-- Grid column -->
 					</div>
 					<!-- Grid row -->
 					<!--Table-->
 					<table class="table table-striped" style="--bs-table-striped-bg: none;">
-                        <!--Table head-->
-                        <thead style="background: #f4f4f4;color: #5d5b5b; font-weight: 100;font-size: 20px;">
+						<!--Table head-->
+						<thead style="background: #f4f4f4;color: #5d5b5b; font-weight: 100;font-size: 20px;">
 							<tr>
 								<th style="width: 35px">#</th>
 								<th style="width: 80px">상품명</th>
@@ -55,13 +57,15 @@
 								<th class="date" style="width: 80px">대출일</th>
 								<th class="views" style="width: 80px">상환일</th>
 								<th style="width: 80px">주문상태</th>
+								<th style="width: 80px">상세보기</th>
 							</tr>
 						</thead>
 						<!--Table head-->
 						<!--Table body-->
 						<tbody>
-							<tr th:each="list : ${manageList}">
+							<tr th:each="list, i : ${manageList}">
 								<th scope="row" th:text="${list.proNo}"></th>
+								
 								<td th:text="${list.proName}">드림대출</td>
 								<td th:text="${list.userId}">김비트</td>
 								<!-- <td th:text="${list.orderNo}">비트교육생</td> -->
@@ -71,10 +75,23 @@
 								<td th:text="${list.purpose}">생활비 자금</td>
 								<td th:text="${list.period}">24개월</td>
 								<td class="date"
-                        th:text="${#dates.format(list.orderDate, 'yyyy-MM-dd')}"></td>
-                     <td class="views"
-                        th:text="${#dates.format(list.endDate, 'yyyy-MM-dd')}"></td>
+									th:text="${#dates.format(list.orderDate, 'yyyy-MM-dd')}"></td>
+								<td class="views"
+									th:text="${#dates.format(list.endDate, 'yyyy-MM-dd')}"></td>
 								<td th:text="${list.status}">주문 대기</td>
+
+								<td>									
+									<!-- kafka 사용 하기 위한 부분 -->
+									<form name="productLoanForm" id="productLoanForm" method="post">
+										<div class="action">
+											<input type="hidden" th:value="${list.orderNo}"
+												th:attr="name='orderNo'+${i.index}" class="orderNo" />
+											<button onclick="statusChange(this)" class="btn-style07" type="button">상세
+												보기</button>
+										</div>
+									</form>
+								</td>
+
 							</tr>
 						</tbody>
 						<!--Table body-->
@@ -87,5 +104,87 @@
 		<!--MDB Tables-->
 		<html th:replace="footer::footerFragment"></html>
 	</main>
+	<script>
+		function statusChange(e) {
+			//1번   proNo=1로 고정...임....
+			var orderNo = $(e).parent().find('.orderNo').val();
+			//var proNo = $('.proNo').val();
+
+			var arr = {
+				"orderNo" : orderNo
+			};
+			console.log(arr);
+
+			$.ajax({
+				anyne : true,
+				type : 'POST',
+				url : '/manage/kafka',
+				data : JSON.stringify(arr),
+				dataType : "text",
+				contentType : 'application/json',
+				success : function(data) {
+					alert("대출 번호 " + orderNo + "번의 대출 심사를 진행하겠습니다.");
+					location.href = "/approve/detail"
+				},
+				error : function(xhr, status, error) {
+					alert(error);
+				}
+			});
+		}
+	</script>
+	<script>
+		$(document).ready(
+				function() {
+					$(".board th input[type=checkbox]").on(
+							"click",
+							function() {
+								var checked = $(this).prop("checked");
+								$(this).closest("thead").siblings("tbody")
+										.find("td input[type=checkbox]").each(
+												function() {
+													$(this).prop("checked",
+															checked);
+												})
+							})
+
+					var order;
+					var input;
+					var datalist = new Array(); //datalist라는 변수명 list로 생성      
+					$("#change").click(
+							function() { //태그에서 id가 change인걸 클릭했을때 발생하는 함수
+								$('input:checked').each(
+										function() { //input 체크한거 foreach 돌리기
+											var data = {
+												orderNo : 0,
+												status : 0
+											}
+											data.orderNo = $(this).parent()
+													.parent().parent().find(
+															'.order').text(); //orderNo 번호 구하기               
+											data.status = $(this).val(); //status 값 구하기               
+											datalist.push(data); //datalist에 데이터 집어넣기
+										})
+								$.ajax({
+									type : "post",
+									url : "update",
+									dataType : "json",
+									data : {
+										data : JSON.stringify(datalist)
+									},
+									success : function(data) {
+										alert(data);
+										location.href = "/manage/list";
+									},
+									error : function(request, error) {
+										location.href = "/manage/list";
+									}
+								});
+							});
+				});
+	</script>
+	<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
 </html>
