--- a/product-service/src/main/resources/templates/product-service-list.html
+++ b/product-service/src/main/resources/templates/product-service-list.html
@@ -10,7 +10,11 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/product-service-list.css">
 <link rel="stylesheet" href="css/button.css">
-
+<script	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <script>
 	function move() {
@@ -51,8 +55,8 @@
 								<th style="width: 385px;">상품 설명</th>
 								<th colspan="2" style="width: 200px;"><button type="button"
 										class="btn-style07 md"
-										style="margin-left: 5%; width: 168px; height: 45px;">상품
-										등록</button></th>
+										style="margin-left: 5%; width: 168px; height: 45px;"
+										onclick="move()">상품 등록</button></th>
 							</tr>
 						</thead>
 						<!--Table head-->
@@ -67,9 +71,22 @@
 								<td th:text="${product.rate}">%</td>
 								<td th:text="${product.term} + '개월'"></td>
 								<td th:text="${product.detail}"></td>
-								<td><button type="button" class="btn-style06 md">수정</button>
+								 <td>
+                                    <form method="get" action="/product/modify"> 
+									 <input type="hidden" th:value="${product.proNo}" name="proNo">
+                                    <button class="btn-style06 md">수정</button>
+                                    </form>
+                                    </td>
+                                    <td>
+                                    <form method="post" action="/product/delete"> 
+								 	<input type="hidden" th:value="${product.proNo}" name="proNo">
+                                    <button class="btn-style06 md">삭제</button></td>
+                                    </form>
+                                    </td>
+								
+								<!-- <td><button type="button" class="btn-style06 md">수정</button>
 								</td>
-								<td><button type="button" class="btn-style06 md">삭제</button></td>
+								<td><button type="button" class="btn-style06 md">삭제</button></td> -->
 							</tr>
 						</tbody>
 						<!--Table body-->
@@ -83,7 +100,7 @@
 		<!--MDB Tables-->
 		<html th:replace="footer::footerFragment"></html>
 	</main>
-
+<script src="js/product.js"></script>
 </body>
 
 
