--- a/order-service/src/main/resources/templates/Fragment/order.html
+++ b/order-service/src/main/resources/templates/Fragment/order.html
@@ -142,7 +142,7 @@
 									</div>
 									<input type="button" name="previous"
 										class="previous action-button-previous" value="Previous" /> <input
-										type="button" name="make_payment" class="next action-button"
+										type="button" name="make_payment" class="action-button"
 										value="Confirm" onclick="javascript:saveOrder(); SendMessage();" />
 								</fieldset>
 							</form>
